@@ -13,6 +13,7 @@ DXGI
 
 Direct3D 9
 	* Fixed a bug in KeyframedAnimationSet.RegisterAnimationKeys that caused invalid values to be set.
+	* Fixed the DeviceEx.FromPointer method.
 
 Direct3D 10
 	* Added missing StateBlockMask constructor.
